src/styles/newstyles.css
@font-face {
  font-family: "Clash Grotesk";
  src: url("../assets/fonts/ClashGrotesk/ClashGrotesk-Variable.ttf");
  font-weight: 100 900;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "Aktura";
  src: url("../assets/fonts/homepageFonts/Aktura-Regular.otf");
  font-weight: normal;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "Chillax";
  src: url("../assets/fonts/homepageFonts/Chillax-Variable.ttf");
  font-weight: 100 900;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "Nippo";
  src: url("../assets/fonts/homepageFonts/Nippo-Regular.otf");
  font-weight: normal;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "Cabinet Grotesk";
  src: url("../assets/fonts/homepageFonts/CabinetGrotesk-Variable.ttf");
  font-weight: 100 900;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "Array";
  src: url("../assets/fonts/homepageFonts/Array-Regular.otf");
  font-weight: normal;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "PubliFluorChrystelise";
  src: url("../assets/fonts/homepageFonts/PubliFluorChrystelise.otf");
  font-weight: normal;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "Polsku";
  src: url("../assets/fonts/homepageFonts/Polsku.ttf");
  font-weight: normal;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "Sans Guilt Wafer";
  src: url("../assets/fonts/homepageFonts/SansGuiltWafer.otf");
  font-weight: normal;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "Terminal Grotesque";
  src: url("../assets/fonts/homepageFonts/terminal-grotesque_open.otf");
  font-weight: normal;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "Bocalupo";
  src: url("../assets/fonts/homepageFonts/Bocalupo-Regular.otf");
  font-weight: normal;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "Young Serif";
  src: url("../assets/fonts/homepageFonts/YoungSerif-Regular.ttf");
  font-weight: normal;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "jgs Font";
  src: url("../assets/fonts/homepageFonts/jgs_Font.ttf");
  font-weight: normal;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "Poppins";
  src: url("../assets/fonts/homepageFonts/Poppins-VariableFont_wght.ttf");
  font-weight: 100 900;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "Basteleur";
  src: url("../assets/fonts/homepageFonts/Basteleur-Bold.ttf");
  font-weight: 100 900;
  font-display: block;
  font-style: normal;
}

@font-face {
  font-family: "Sage Grotesk";
  src: url("../assets/fonts/homepageFonts/Sage-Grotesk.otf");
  font-weight: 100 900;
  font-display: block;
  font-style: normal;
}

:root {
  --text-color: #000000;
  --bg-color: #F5F5F5;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Clash Grotesk", sans-serif;
  background-color: var(--bg-color);
  color: var(--text-color);
  padding: 1rem;
  min-height: 100vh;
  display: flex;
  overflow: auto;
}

a {
  color: #ff6f00;
}

a:visited {
  color: #b85c00;
}

.spacer {
  margin-top: 2rem;
}

.side-nav {
  flex: 1;
  font-family: "Clash Grotesk", sans-serif;
  left: 1rem;
  height: auto;
  transition: all 0.3s ease;
  position: fixed;
  top: 0;
  z-index: 10;
}

/* .side-nav.sticky {
    flex: 1;
    top: 2rem;
    transform: none;
} */

.sticky {
  position: -webkit-sticky;
  /* for Safari */
  position: sticky;
  top: 0;
  align-self: flex-start;
}

.side-nav ul {
  list-style: none;

  text-orientation: mixed;
}

.side-nav li {
  writing-mode: vertical-rl;
  transform: rotate(180deg);
  margin: 2rem 0;
}

.side-nav a {
  text-decoration: none;
  font-family: "Clash Grotesk", sans-serif;
  color: var(--text-color);
  font-size: 1.5rem;
  transition: all 0.3s ease;
  touch-action: manipulation;
  -webkit-tap-highlight-color: transparent;
}

.side-nav a:hover {
  font-size: 2rem;
  color: #ff6f00;
  transition: all 0.3s ease;
}

.side-nav .active {
  color: #d5b1e3;
}

main {
  flex: 6;
  margin: 0 auto;
  padding: 0 2rem;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  position: relative;
}

.title {
  padding: none;
  font-size: clamp(3rem, 8vw, 6rem);
  font-weight: normal;
  margin-bottom: 4rem;
  text-align: center;
  /* Removed transition for instant font changes */
  min-height: 1.2em;
  width: 100%;
  max-width: 800px;
  position: absolute;
  top: 50vh;
  left: 50%;
  transform: translate(-50%, -50%);
  white-space: nowrap;
}

.title:hover {
  cursor: default;
}

.intro {
  margin-top: 90%;
  max-width: 600px;
  margin-left: 6vw;
  margin-right: auto;
  line-height: 1.6;
}

.bio {
  max-width: 600px;
  margin-left: 6vw;
  margin-right: auto;
  line-height: 1.6;
}

.profile-image {
  margin: 4rem 0;
  width: 60vw;
  margin-left: 6vw;
}

.profile-image img {
  width: 100%;
  height: auto;
  object-fit: cover;

  box-shadow: inset 10px 10px black;
  -webkit-box-shadow: inset 10px 10px black;
  -moz-box-shadow: inset 10px 10px black;
}

.boulder-co {
  align-self: flex-start;
  flex: 1;
  padding-top: 40vh;
  font-family: "Clash Grotesk", sans-serif;
  font-size: 1.5rem;
  writing-mode: vertical-rl;
  text-orientation: mixed;
  transition: all 0.3s ease;
  color: black;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-tap-highlight-color: transparent;
}

footer {
  font-family: "Clash Grotesk", sans-serif;
  padding-top: 15rem;
  bottom: 1rem;
  left: 1rem;
  right: 1rem;
  display: flex;
  justify-content: space-between;
  font-size: 0.8rem;
}

.font-credits {
  top: 0;
  left: 0;
  right: 0;
  font-size: 0.8rem;
  transition: all 0.3s ease;
  text-align: center;
  color: #666666;
  z-index: 100;
  pointer-events: none;
}
/* ... */

